--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,33 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>TTTTTTTT</title>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<title>Pricing example · Bootstrap</title>
+	<link href="/_css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.bd-placeholder-img {
+			font-size: 1.125rem;
+			text-anchor: middle;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+		}
 
-		{% include meta.html %}
+		@media (min-width: 768px) {
+			.bd-placeholder-img-lg {
+				font-size: 3.5rem;
+			}
+		}
+	</style>
+	<!-- Custom styles for this template -->
+	<!-- <link href="/css/pricing.css" rel="stylesheet"> -->
+</head>
+<body>
 
-		<!--[if lt IE 9]>
-			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+{{ content }}
 
-		<!-- <link rel="stylesheet" type="text/css" href="/style.css" /> -->
-	</head>
-
-	<body>
-		<h1>H1 H1 H1 H1 H1 H1 H1 H1 H1 </h1>
-			{{ content }}
-	</body>
+</body>
 </html>
