--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<title>Pricing example · Bootstrap</title>
-	<link href="/_css/bootstrap.min.css" rel="stylesheet">
+	<link href="/technote/_css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		.bd-placeholder-img {
 			font-size: 1.125rem;
