--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,20 +7,14 @@
 	<title>Pricing example · Bootstrap</title>
 	<link href="/technote/_css/bootstrap.min.css" rel="stylesheet">
 	<style>
-		.bd-placeholder-img {
-			font-size: 1.125rem;
-			text-anchor: middle;
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			user-select: none;
-		}
-
-		@media (min-width: 768px) {
-			.bd-placeholder-img-lg {
-				font-size: 3.5rem;
-			}
-		}
+h1>a {
+  color: #bbbbbb;
+}
+.r {
+  color: red;
+  font-size: 1em;
+  font-weight: bold;
+}
 	</style>
 	<!-- Custom styles for this template -->
 	<!-- <link href="/css/pricing.css" rel="stylesheet"> -->
