--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<title>{{ title }}</title>
-	<link href="/technote/_css/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ site.baseurl }}/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<style>
 h1>a {
   color: #bbbbbb;
