--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
-	<title>{{ title }}</title>
+	<title>{{ page.title }}</title>
 	<link href="{{ site.baseurl }}/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<style>
 h1>a {
