set github style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,18 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ page.title }}</title>
-	<link href="{{ site.baseurl }}/bootstrap/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ site.baseurl }}/github.css" rel="stylesheet">
 	<style>
-h1>a {
-  color: #bbbbbb;
-}
 .r {
   color: red;
   font-size: 1em;
   font-weight: bold;
 }
 	</style>
-	<!-- Custom styles for this template -->
-	<!-- <link href="/css/pricing.css" rel="stylesheet"> -->
 </head>
 <body>
 
