--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,11 @@
   font-size: 1em;
   font-weight: bold;
 }
+a[href ^= "http"] {
+  color: green;
+}
 	</style>
+}
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
