corrected github.css

--- a/github.css
+++ b/github.css
@@ -166,7 +166,7 @@ body {
 	background-color: #fff
 }
 a {
-	color: #0366d6;
+	color: green;
 	text-decoration: none
 }
 a:hover {
@@ -245,7 +245,7 @@ p {
 	margin-bottom: 10px
 }
 small {
-	font-size: 90%
+	font-size: 85%  /* 90% */
 }
 blockquote {
 	margin: 0
@@ -266,13 +266,13 @@ dd {
 }
 tt, code {
 	font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-	font-size: 12px
+	font-size: 13px  /* 12 px */
 }
 pre {
 	margin-top: 0;
 	margin-bottom: 0;
 	font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-	font-size: 12px
+	font-size: 13px  /* 12 px */
 }
 .octicon {
 	vertical-align: text-bottom
@@ -4921,7 +4921,7 @@ pre {
 .markdown-body code, .markdown-body tt {
 	padding: 0.2em 0.4em;
 	margin: 0;
-	font-size: 85%;
+	font-size: 100%;  /* 85% */
 	background-color: rgba(27, 31, 35, 0.05);
 	border-radius: 3px
 }
@@ -4953,7 +4953,7 @@ pre {
 .markdown-body .highlight pre, .markdown-body pre {
 	padding: 16px;
 	overflow: auto;
-	font-size: 85%;
+	font-size: 100%;  /* 85% */
 	line-height: 1.45;
 	background-color: #f6f8fa;
 	border-radius: 3px
@@ -5203,4 +5203,13 @@ pre {
 }
 .highlight {
 	background-color: #f8f8f8
+}
+/* ans */
+.r {
+  color: red;
+  font-size: 1em;
+  font-weight: bold;
+}
+a[href ^= "http"] {
+  color: #0366d6;
 }
