--- a/github.css
+++ b/github.css
@@ -60,7 +60,7 @@ small {
 	font-size: 80%
 }
 sub, sup {
-	font-size: 75%;
+	font-size: 85%;  /* 75% */
 	line-height: 0;
 	position: relative;
 	vertical-align: baseline
