--- a/github.css
+++ b/github.css
@@ -5222,6 +5222,9 @@ pre {
   font-size: 1em;
   font-weight: bold;
 }
-a[href ^= "http|mailto"] {
+a[href ^= "http"] {
+  color: #0366d6;
+}
+a[href ^= "mailto"] {
   color: #0366d6;
 }
