--- a/github.css
+++ b/github.css
@@ -4718,8 +4718,9 @@ pre {
 }
 .markdown-body kbd {
 	display: inline-block;
-	padding: 3px 5px;
-	font-size: 11px;
+	padding: 5px;  /* 3px 5px; */
+	margin: 0 4px;  /* + */
+	font-size: 14px;  /* 11px */
 	line-height: 10px;
 	color: #444d56;
 	vertical-align: middle;
@@ -4727,7 +4728,7 @@ pre {
 	border: solid 1px #c6cbd1;
 	border-bottom-color: #959da5;
 	border-radius: 3px;
-	box-shadow: inset 0 -1px 0 #959da5
+	box-shadow: inset 0 -1px 0 #959da5;
 }
 .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
 	margin-top: 24px;
@@ -5222,7 +5223,7 @@ pre {
   font-size: 1em;
   font-weight: bold;
 }
-a[href ^= "http|mailto"] {
+a[href ^= "http"] {
   color: #0366d6;
 }
 a[href ^= "mailto"] {
