--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
+{% if page.title != "TechNote" %}
+  <p><a href="{{ site.baseurl }}">Home</a></p>
+{% endif %}
+		
 
 {{ content }}
 
