--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
 {% if page.title != "TechNote" %}
-  <!--p><a href="{{ site.baseurl }}">Home</a></p-->
-  {% include_relative path.md %}
+	  <!--p><a href="{{ site.baseurl }}">Home</a></p-->
+	  <p>Test</p>
+	  {% include_relative path.md %}
 {% endif %}
 		
 
