--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,11 +10,11 @@
 {% for p in lnk %}
   {% if p == '' %}
     <a href="{{ site.baseurl }}">Home</a>
-    {{ full_url | append: site.baseurl }}
+    {% assign full_url = full_url | append: site.baseurl %}
   {% else %}
     &gt; <a href="{{ p }}">{{ p }}</a>
-    {{ full_url | append: "/" }}
-    {{ full_url | append: p }}
+    {% assign full_url = full_url | append: "/" %}
+    {% assign full_url = full_url | append: p %}
   {% endif %}
 {% endfor %}
 </p>
