--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,23 @@
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
-{% if page.title != "TechNote" %}
-	  <p><a href="{{ site.baseurl }}">Home</a></p>
-{% endif %}
-		
+
+{% assign lnk = page.url | split: "/" %}
+{% assign full_url = "" %}
+
+<p>
+{% for p in lnk %}
+  {% if p == '' %}
+    <a href="{{ site.baseurl }}">Home</a>
+    {% assign full_url = full_url | append: site.baseurl %}
+  {% else %}
+    {% assign full_url = full_url | append: "/" %}
+    {% assign full_url = full_url | append: p %}
+    &gt; <a href="{{ full_url }}">{{ p }}</a>
+  {% endif %}
+{% endfor %}
+</p>
+
 
 {{ content }}
 
