--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,21 +10,22 @@
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
 
-{% assign lnk = page.url | split: "/" %}
-{% assign full_url = "" %}
-
-<p>
-{% for p in lnk %}
-  {% if p == '' %}
-    <a href="{{ site.baseurl }}">Home</a>
-    {% assign full_url = full_url | append: site.baseurl %}
-  {% else %}
-    {% assign full_url = full_url | append: "/" %}
-    {% assign full_url = full_url | append: p %}
-    &gt; <a href="{{ full_url }}">{{ p }}</a>
-  {% endif %}
-{% endfor %}
-</p>
+{% if page.title != "TechNote" %}
+  {% assign lnk = page.url | split: "/" %}
+  {% assign full_url = "" %}
+  <p>
+  {% for p in lnk %}
+    {% if p == '' %}
+      <a href="{{ site.baseurl }}">Home</a>
+      {% assign full_url = full_url | append: site.baseurl %}
+    {% else %}
+      {% assign full_url = full_url | append: "/" %}
+      {% assign full_url = full_url | append: p %}
+      &gt; <a href="{{ p }}">{{ p }}</a>
+    {% endif %}
+  {% endfor %}
+  </p>
+{% endif %}
 
 
 {{ content }}
