--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,12 @@
   <p>
   {% for p in lnk %}
     {% if p == '' %}
-      <a href="{{ site.baseurl }}">Home</a>
+      <a href="{{ site.baseurl }}">home</a>
       {% assign full_url = full_url | append: site.baseurl %}
     {% else %}
       {% assign full_url = full_url | append: "/" %}
       {% assign full_url = full_url | append: p %}
-      &gt; <a href="{{ p }}">{{ p }}</a>
+      &gt; <a href="{{ full_url }}">{{ p }}</a>
     {% endif %}
   {% endfor %}
   </p>
