--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,6 @@
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
 
-<p>Address of page: {{ page.url }}</p>
-
 {% if page.title != "TechNote" %}
   {% assign lnk = page.url | split: "/" %}
   {% assign full_url = "" %}
@@ -23,7 +21,7 @@
     {% else %}
       {% assign full_url = full_url | append: "/" %}
       {% assign full_url = full_url | append: p %}
-      {% assign full_url = full_url | remove: ".html" %}
+      {% assign p = p | remove: ".html" %}
       &gt; <a href="{{ full_url }}">{{ p }}</a>
     {% endif %}
   {% endfor %}
