--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,18 +11,18 @@
 	<div class="container-lg px-3 my-5 markdown-body">
 
 {% if page.title != "TechNote" %}
-  {% assign lnk = page.url | split: "/" %}
+  {% assign arr_pages = page.url | split: "/" %}
   {% assign full_url = "" %}
   <p>
-  {% for p in lnk %}
-    {% if p == '' %}
+  {% for item in arr_pages %}
+    {% if item == '' %}
       <a href="{{ site.baseurl }}">home</a>
       {% assign full_url = full_url | append: site.baseurl %}
     {% else %}
       {% assign full_url = full_url | append: "/" %}
-      {% assign full_url = full_url | append: p %}
-      {% assign p = p | remove: ".html" %}
-      &gt; <a href="{{ full_url }}">{{ p }}</a>
+      {% assign full_url = full_url | append: item %}
+      {% assign item = item | remove: ".html" %}
+      / <a href="{{ full_url }}">{{ item }}</a>
     {% endif %}
   {% endfor %}
   </p>
