--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
 
-{% if page.title != "TechNote" %}
+{% if page.url != "/" %}
   {% assign arr_pages = page.url | split: "/" %}
   {% assign full_url = "" %}
   <p>
