--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -1,3 +1,3 @@
 ---
 
-Edit https://github.com/olexsyn/e-note/blob/master{{% page.url ⅝}}README.md
+Edit https://github.com/olexsyn/e-note/blob/master{{ page.url }}README.md
