--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -1,3 +1,3 @@
 <hr />
 
-<p class="text-gray"><a href="https://github.com/olexsyn/e-note/blob/master{{ page.url }}README.md" target="_blank">edit</a></p>
+<p><small>[<a href="https://github.com/olexsyn/e-note/blob/master{{ page.url }}README.md" target="_blank" class="text-gray">edit</a>]</small></p>
