--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ page.title }}</title>
 	<link href="{{ site.baseurl }}/github.css" rel="stylesheet">
+	<style>
+div.breadcr {
+   height: 10em;
+   position: relative }
+div.breadcr p {
+   margin: 0;
+   position: absolute;
+   top: 50%;
+   transform: translate(0, -50%) }
+	</style>
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
@@ -13,7 +23,7 @@
 {% if page.url != "/" %}
   {% assign arr_pages = page.url | split: "/" %}
   {% assign full_url = "" %}
-  <p>
+  <div class="breadcr"><p>
   {% for item in arr_pages %}
     {% if item == '' %}
       <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/i/home.svg" alt="home" /></a>
@@ -25,7 +35,7 @@
       / <a href="{{ full_url }}">{{ dir }}</a>
     {% endif %}
   {% endfor %}
-  </p>
+  </p></div>
 {% endif %}
 
 {{ content }}
