--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 	<link href="{{ site.baseurl }}/github.css" rel="stylesheet">
 	<style>
 div.breadcr {
+   height: 1em;
    position: relative }
 div.breadcr p {
    margin: 0;
