--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -1,2 +1,2 @@
-<hr />
+<hr style="margin: 24px 0 5px;" />
 <p class="text-right"><small><a href="https://github.com/olexsyn/e-note/blob/master{{ page.url }}README.md" target="_blank" class="text-gray">edit</a></small></p>
