--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{{ page.title }}</title>
+	<title>{{ page.title }} | E-Note</title>
 	<link href="{{ site.baseurl }}/github.css" rel="stylesheet">
 </head>
 <body>
