--- a/github.css
+++ b/github.css
@@ -1,4 +1,3 @@
-
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 
 html {
@@ -4759,8 +4758,8 @@ pre {
 	border-bottom: 1px solid #eaecef
 */
 	padding-top: 0.75em;
-	font-size: 2em;
-	border-top: 2px solid #d5d5d5;
+	font-size: 1.75em;  /* 2em */
+	border-top: 1px solid #d5d5d5;
 }
 .markdown-body h2 {
 /*
@@ -4769,21 +4768,21 @@ pre {
 	border-bottom: 1px solid #eaecef
 */
 	padding-top: 0.70em;
-	font-size: 1.75em;
+	font-size: 1.60em;
 	border-top: 1px solid #d5d5d5;
 }
 .markdown-body h3 {
-	font-size: 1.50em  /* 1.25em */
+	font-size: 1.45em  /* 1.25em */
 }
 .markdown-body h4 {
-	font-size: 1.25em  /* 1em */
+	font-size: 1.30em  /* 1em */
 }
 .markdown-body h5 {
-	font-size: 1em  /* 0.875em */
+	font-size: 1.15em  /* 0.875em */
 }
 .markdown-body h6 {
 	font-size: 1em;  /* 0.85em */
-	color: #6a737d
+	/* color: #6a737d */
 }
 .markdown-body ul, .markdown-body ol {
 	padding-left: 2em
@@ -5220,7 +5219,7 @@ pre {
 /* ans */
 .r {
   color: red;
-  font-size: 1em;
+  font-size: 1.25em;
   font-weight: bold;
 }
 a[href ^= "http"] {
