--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -1,2 +1,5 @@
 <hr style="margin: 24px 0 5px;" />
-<p class="text-right"><small><a href="https://github.com/olexsyn/e-note/blob/master{{ page.url }}README.md" target="_blank" class="text-gray">edit</a></small></p>
+<p class="text-right"><small>
+  <a href="https://github.com/olexsyn/e-note/blob/master{{ page.url }}README.md" target="_blank" class="text-gray">code</a> |
+  <a href="https://github.com/olexsyn/e-note/edit/master{{ page.url }}README.md" target="_blank" class="text-gray">edit</a>
+</small></p>
