--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <div class="breadcr"><p>
   {% for item in arr_pages %}
     {% if item == '' %}
-      <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/i/enote_25.png" alt="E"/></a>
+      <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/i/enote_25.png" alt="home" title="Home" /></a>
       {% assign full_url = full_url | append: site.baseurl %}
     {% else %}
       {% assign full_url = full_url | append: "/" %}
