--- a/github.css
+++ b/github.css
@@ -1,4 +1,4 @@
-/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
+/*! olexsyn's fork from github.com/necolas/normalize.css v4.1.1 | MIT License */
 
 html {
 	font-family: sans-serif;
@@ -159,7 +159,7 @@ input, select, textarea, button {
 }
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	font-size: 16px;  /* 14px */
+	font-size: 14px;
 	line-height: 1.5;
 	color: #24292e;
 	background-color: #fff
@@ -4658,7 +4658,7 @@ pre {
 }
 .markdown-body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	font-size: 18px;  /* 16px */
+	font-size: 14px;
 	line-height: 1.5;
 	word-wrap: break-word
 }
@@ -4719,7 +4719,7 @@ pre {
 	display: inline-block;
 	padding: 5px;  /* 3px 5px; */
 	margin: 0 4px;  /* + */
-	font-size: 14px;  /* 11px */
+	font-size: 13px;  /* 11px */
 	line-height: 10px;
 	color: #444d56;
 	vertical-align: middle;
