--- a/github.css
+++ b/github.css
@@ -2,27 +2,27 @@
 
 @font-face {
   font-family: "Roboto Condensed";
-  src: url({{ site.baseurl }}/css/fonts/RobotoCondensed-Regular.ttf);
+  src: url(/e-note/css/fonts/RobotoCondensed-Regular.ttf);
 }
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
-  src: url({{ site.baseurl }}/css/fonts/OpenSans-Regular.ttf);
+  src: url(/e-note/css/fonts/OpenSans-Regular.ttf);
 }
 @font-face {
   font-family: "Open Sans";
   font-style: italic;
-  src: url({{ site.baseurl }}/css/fonts/OpenSans-Italic.ttf);
+  src: url(/e-note/css/fonts/OpenSans-Italic.ttf);
 }
 @font-face {
   font-family: "Open Sans";
   font-weight: bold;
-  src: url({{ site.baseurl }}/css/fonts/OpenSans-Semibold.ttf);
+  src: url(/e-note/css/fonts/OpenSans-Semibold.ttf);
 }
 @font-face {
   font-family: "Droid Sans Mono";
   /* font-weight: bold; здесь специально указан bold, чтобы не рисовались ключевые слова жирным */
-  src: url({{ site.baseurl }}/css/fonts/DroidSansMono.ttf);
+  src: url(/e-note/css/fonts/DroidSansMono.ttf);
 }
 html {
 	font-family: sans-serif;
