--- a/github.css
+++ b/github.css
@@ -5,21 +5,6 @@
   src: url(/e-note/css/fonts/RobotoCondensed-Regular.ttf);
 }
 @font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  src: url(/e-note/css/fonts/OpenSans-Regular.ttf);
-}
-@font-face {
-  font-family: "Open Sans";
-  font-style: italic;
-  src: url(/e-note/css/fonts/OpenSans-Italic.ttf);
-}
-@font-face {
-  font-family: "Open Sans";
-  font-weight: bold;
-  src: url(/e-note/css/fonts/OpenSans-Semibold.ttf);
-}
-@font-face {
   font-family: "Droid Sans Mono";
   /* font-weight: bold; здесь специально указан bold, чтобы не рисовались ключевые слова жирным */
   src: url(/e-note/css/fonts/DroidSansMono.ttf);
@@ -182,7 +167,7 @@ input, select, textarea, button {
 	line-height: inherit
 }
 body {
-	font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 14px;
 	line-height: 1.5;
 	color: #24292e;
@@ -4681,7 +4666,7 @@ pre {
 	}
 }
 .markdown-body {
-	font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 14px;
 	line-height: 1.5;
 	word-wrap: break-word
@@ -4758,7 +4743,7 @@ pre {
 	padding: 0;
 	margin-top: 24px;
 	margin-bottom: 16px;
-	font-weight: normal; /* 600 */
+	font-weight: 500; /* 600 */
 	line-height: 1.25
 }
 .markdown-body h1 .octicon-link, .markdown-body h2 .octicon-link, .markdown-body h3 .octicon-link, .markdown-body h4 .octicon-link, .markdown-body h5 .octicon-link, .markdown-body h6 .octicon-link {
