--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       {% assign full_url = full_url | append: "/" %}
       {% assign full_url = full_url | append: item %}
       {% assign dir = item | remove: ".html" %}
-      / <a href="{{ full_url }}">{{ dir }}</a> {{ page.name }}
+      / <a href="{{ full_url }}">{{ dir }}</a> {{ page.url }}
     {% endif %}
   {% endfor %}
   </p></div>
