--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 
 {% if page.url != "/" %}
   {% assign arr_pages = page.url | split: "/" %}
+  {% assign last_page = page.url | split: "/" | last %}
   {% assign full_url = "" %}
   <div class="breadcr"><p>
   {% for item in arr_pages %}
@@ -22,7 +23,10 @@
       {% assign full_url = full_url | append: "/" %}
       {% assign full_url = full_url | append: item %}
       {% assign dir = item | remove: ".html" %}
-      / <a href="{{ full_url }}">{{ dir }}</a> {{ page.url }}
+      {% if dir == last_page %}
+        / <b>{{ dir }}</b>
+      {% else %}
+        / <a href="{{ full_url }}">{{ dir }}</a>
     {% endif %}
   {% endfor %}
   </p></div>
