--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
         / <b>{{ dir }}</b>
       {% else %}
         / <a href="{{ full_url }}">{{ dir }}</a>
+      {% endif %}
     {% endif %}
   {% endfor %}
   </p></div>
