--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ page.title }} | E-Note</title>
-	<link href="{{ site.baseurl }}/github.css" rel="stylesheet">
+	<link href="{{ site.baseurl }}/css/github.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container-lg px-3 my-5 markdown-body">
