--- a/css/github.css
+++ b/css/github.css
@@ -1,13 +1,12 @@
 /*! olexsyn's fork from github.com/necolas/normalize.css v4.1.1 | MIT License */
 
 @font-face {
-  font-family: "Roboto Condensed";
-  src: url(/e-note/css/fonts/RobotoCondensed-Regular.ttf);
+	font-family: "Oswald";
+	src: url(/e-note/css/fonts/Oswald.ttf);
 }
 @font-face {
-  font-family: "Droid Sans Mono";
-  /* font-weight: bold; здесь специально указан bold, чтобы не рисовались ключевые слова жирным */
-  src: url(/e-note/css/fonts/DroidSansMono.ttf);
+	font-family: "Droid Sans Mono";
+	src: url(/e-note/css/fonts/DroidSansMono.ttf);
 }
 html {
 	font-family: sans-serif;
@@ -4739,11 +4738,11 @@ pre {
 	box-shadow: inset 0 -1px 0 #959da5;
 }
 .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
-	font-family: "Roboto Condensed";
+	font-family: "Oswald";
 	padding: 0;
 	margin-top: 24px;
 	margin-bottom: 16px;
-	font-weight: 500; /* 600 */
+	font-weight: 500;
 	line-height: 1.25
 }
 .markdown-body h1 .octicon-link, .markdown-body h2 .octicon-link, .markdown-body h3 .octicon-link, .markdown-body h4 .octicon-link, .markdown-body h5 .octicon-link, .markdown-body h6 .octicon-link {
