--- a/css/github.css
+++ b/css/github.css
@@ -86,7 +86,7 @@ svg:not(:root) {
 }
 code, kbd, pre, samp {
 	font-family: "Droid Sans Mono", "Courier New", monospace;
-	font-size: 1em
+	font-size: 0.85em
 }
 figure {
 	margin: 1em 40px
@@ -4963,7 +4963,9 @@ pre {
 	word-break: normal;
 	white-space: pre;
 	background: transparent;
-	border: 0
+	/* border: 0 */
+	border: 1px solid #e5e5e5;
+	border-radius: 6px;
 }
 .markdown-body .highlight {
 	margin-bottom: 16px
@@ -4989,7 +4991,8 @@ pre {
 	line-height: inherit;
 	word-wrap: normal;
 	background-color: transparent;
-	border: 0
+	/* border: 0 */
+	border: 1px solid #e5e5e5;
 }
 .markdown-body .csv-data td, .markdown-body .csv-data th {
 	padding: 5px;
