--- a/css/github.css
+++ b/css/github.css
@@ -4963,9 +4963,7 @@ pre {
 	word-break: normal;
 	white-space: pre;
 	background: transparent;
-	/* border: 0 */
-	border: 1px solid #e5e5e5;
-	border-radius: 6px;
+	border: 0
 }
 .markdown-body .highlight {
 	margin-bottom: 16px
@@ -4991,8 +4989,7 @@ pre {
 	line-height: inherit;
 	word-wrap: normal;
 	background-color: transparent;
-	/* border: 0 */
-	border: 1px solid #e5e5e5;
+	border: 0
 }
 .markdown-body .csv-data td, .markdown-body .csv-data th {
 	padding: 5px;
