--- a/css/github.css
+++ b/css/github.css
@@ -4980,7 +4980,8 @@ pre {
 	font-size: 100%;  /* 85% */
 	line-height: 1.45;
 	background-color: #f6f8fa;
-	border-radius: 3px
+	border-radius: 6px;  /* 3px; */
+	border: 1px solid #d6e3ee;
 }
 .markdown-body pre code, .markdown-body pre tt {
 	display: inline;
