--- a/css/github.css
+++ b/css/github.css
@@ -4981,7 +4981,7 @@ pre {
 	line-height: 1.45;
 	background-color: #f6f8fa;
 	border-radius: 6px;  /* 3px; */
-	border: 1px solid #d6e3ee;
+	border: 1px solid #e6e8ea;  /* + */
 }
 .markdown-body pre code, .markdown-body pre tt {
 	display: inline;
@@ -5240,4 +5240,17 @@ a[href ^= "http"] {
 }
 a[href ^= "mailto"] {
   color: #0366d6;
+}
+.markdown-body term {
+	padding: 16px;
+	overflow: auto;
+	font-size: 100%;  /* 85% */
+	line-height: 1.45;
+	background-color: #444;
+	color: #eee;
+	border-radius: 6px;  /* 3px; */
+	border: 1px solid #e6e8ea;
+}
+.markdown-body term .command{
+	color: #F8F8F8;
 }
