--- a/_includes/cmdln.html
+++ b/_includes/cmdln.html
@@ -1,1 +1,1 @@
-<pre class="command-line"><span class="command">{{ include.command }}</span></pre>
+<pre class="command-line"><span class="command">{{ include.comm }}</span></pre>
