--- a/_includes/cmdlgout.html
+++ b/_includes/cmdlgout.html
@@ -1,1 +1,4 @@
-test
+<pre class="command-line"><span class="command">{{ include.comm }}</span>
+
+<span class="output">{{ include.out }}</span></pre>
+
