--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,11 @@
 <hr style="margin: 24px 0 5px;" />
 <p><small>
 	<span class="float-left">
-		<a href="{{ site.baseurl }}/tree/master/git/github/repo2server/" target="_blank" class="text-gray">code</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/tree/master/git/github/repo2server/" target="_blank" class="text-gray">code</a>
 		&nbsp; | &nbsp;
-		<a href="{{ site.baseurl }}/edit/master/git/github/repo2server/README.md" target="_blank" class="text-gray">edit</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master/git/github/repo2server/README.md" target="_blank" class="text-gray">edit</a>
 	</span>
 	<span class="float-right">
-		<a href="#top">top</a>
+		<a href="#top" class="text-gray">top</a>
 	</span>
 </small></p>
