--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
 	<link href="{{ site.baseurl }}/favicon.ico" rel="shortcut icon" type="image/png">
 	<link href="{{ site.baseurl }}/css/github.css" rel="stylesheet">
 </head>
-<body>
-	<a name="top"></a>
+<body><a name="top"></a>
 	<div class="container-lg px-3 my-5 markdown-body">
 
 {% include breadcrumb.html %}
