--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
 <body><a name="top"></a>
 	<div class="container-lg px-3 my-5 markdown-body">
 
-{% include breadcrumb.html %}
+{% include breadcrumb.htm %}
 
 {{ content }}
 
-{% include footer.html %}
+{% include footer.htm %}
 
 	</div>
 </body>
