--- a/_includes/breadcrumb.htm
+++ b/_includes/breadcrumb.htm
@@ -2,15 +2,17 @@
 {% if page.url != "/" %}
   {% assign arr_pages = page.url | split: "/" %}
   {% assign last_page = page.url | split: "/" | last %}
-  {% assign full_url = "" %}
   <p>
   {% for item in arr_pages %}
     {% if item == '' %}
-      <a href="{{ site.baseurl }}">note</a>
-      {% assign full_url = full_url | append: site.baseurl %}
+      <a href="{{ site.baseurl }}">home</a>
+      {% assign full_url = "" %}
     {% else %}
+      {% comment %}
       {% assign full_url = full_url | append: "/" %}
       {% assign full_url = full_url | append: item %}
+      {% endcomment %}
+      {% capture full_url %}{{ full_url }}/{{ item }}{% endcapture %}
       {% assign dir = item | remove: ".html" %}
       {% if dir == last_page %}
         / <b>{{ dir }}</b>
