--- a/_includes/breadcrumb.htm
+++ b/_includes/breadcrumb.htm
@@ -5,8 +5,8 @@
   <p>
   {% for item in arr_pages %}
     {% if item == '' %}
-      <a href="{{ site.baseurl }}">home</a>
       {% assign full_url = site.baseurl %}
+      <a href="{{ full_url }}">home</a>
     {% else %}
       {% capture full_url %}{{ full_url }}/{{ item }}{% endcapture %}
       {% assign dir = item | remove: ".html" %}
