--- a/_includes/edit.htm
+++ b/_includes/edit.htm
@@ -5,6 +5,6 @@
 		<a href="#top" class="text-gray">top</a>
 	</span>
 	<span class="float-right">
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ page.name }}" target="_blank" class="text-gray">edit</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}/{{ include.f | default: '' }}" target="_blank" class="text-gray">edit</a>
 	</span>
 </small></p>
