--- a/_includes/part.htm
+++ b/_includes/part.htm
@@ -1,6 +1,6 @@
 <!-- end of {{ include.f }} -->
 <hr style="margin: 24px 0 5px;" />
-<p style="margin-bottom: 15px;"><small>
+<p style="padding-bottom: 40px;"><small>
 	<span class="float-left">
 		<a href="#top" class="text-gray">top</a>
 	</span>
