--- a/_includes/cmdout.htm
+++ b/_includes/cmdout.htm
@@ -1,2 +1,8 @@
 <pre class="command-line"><span class="command">{{ include.cmd }}</span>
-{{ include.out }}</pre>
+<%- if include.sm -%}
+	<span class="output">{{ include.sm }}</span>
+{%- endif -%}
+{%- if include.out -%}
+	{{ include.out }}
+{%- endif -%}
+</pre>
