--- a/_includes/cmdout.htm
+++ b/_includes/cmdout.htm
@@ -1,7 +1,7 @@
 <pre class="command-line"><span class="command">{{ include.cmd }}</span>
 <%- if include.sm -%}
 	<span class="output">{{ include.sm }}</span>
-{%- endif -%}
+{% endif %}
 {%- if include.out -%}
 	{{ include.out }}
 {%- endif -%}
