--- a/_includes/cmdout.htm
+++ b/_includes/cmdout.htm
@@ -1,5 +1,5 @@
 <pre class="command-line"><span class="command">{{ include.cmd }}</span>
-<%- if include.sm != '' -%}
+{%- if include.sm != '' -%}
 	<span class="output">{{ include.sm }}</span>
 {%- endif -%}
 {%- if include.out != '' -%}
