--- a/_includes/part.htm
+++ b/_includes/part.htm
@@ -1,10 +1,10 @@
 <!-- end of {{ include.f }} -->
-<hr style="margin: 24px 0 5px;" />
+<hr class="text-gray-light" style="margin: 24px 0 5px;" />
 <p style="padding-bottom: 40px;"><small>
 	<span class="float-left">
-		<a href="#top" class="text-gray">top</a>
+		<a href="#top" class="text-gray-light">top</a>
 	</span>
 	<span class="float-right">
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ include.f | default: '' }}" target="_blank" class="text-gray">edit</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ include.f | default: '' }}" target="_blank" class="text-gray-light">edit</a>
 	</span>
 </small></p>
