css line off above h2

--- a/css/github.css
+++ b/css/github.css
@@ -4763,7 +4763,7 @@ pre {
 */
 .markdown-body h1 {
 	padding-top: 0.75em;
-	border-top: 1px solid #999;
+	border-top: 1px solid #d5d5d5;
 	font-size: 2em;
 /*
 	padding-bottom: 0.3em;
@@ -4777,7 +4777,6 @@ pre {
 	border-bottom: 1px solid #eaecef
 */
 	padding-top: 0.70em;
-	border-top: 1px solid #999;
 	font-size: 1.85em;
 }
 .markdown-body h3 {
@@ -5234,6 +5233,9 @@ pre {
   color: red;
   font-size: 1.25em;
   font-weight: bold;
+}
+.lighter {
+	color: #c4c4c4 !important
 }
 a[href ^= "http"] {
   color: #0366d6;
