--- a/_includes/part.htm
+++ b/_includes/part.htm
@@ -1,10 +1,10 @@
 <!-- end of {{ include.f }} -->
-<hr style="color: #c4c4c4; margin: 24px 0 5px" />
+<hr class="lighter" style="margin: 24px 0 5px" />
 <p style="padding-bottom: 40px;"><small>
 	<span class="float-left">
-		<a href="#top" style="color: #c4c4c4">top</a>
+		<a href="#top" class="lighter">top</a>
 	</span>
 	<span class="float-right">
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ include.f | default: '' }}" target="_blank" style="color: #c4c4c4">edit</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ include.f | default: '' }}" target="_blank" class="lighter">edit</a>
 	</span>
 </small></p>
