--- a/_includes/part.htm
+++ b/_includes/part.htm
@@ -1,10 +1,12 @@
 <!-- end of {{ include.f }} -->
 <hr class="lighter" style="margin: 24px 0 5px" />
-<p style="padding-bottom: 40px;"><small>
+<p><small>
 	<span class="float-left">
 		<a href="#top" class="lighter">top</a>
 	</span>
+	{%- if include.f %}
 	<span class="float-right">
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ include.f | default: '' }}" target="_blank" class="lighter">edit</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}{{ include.f }}" target="_blank" class="lighter">edit</a>
 	</span>
+	{% endif -%}
 </small></p>
