--- a/_includes/cmdout.htm
+++ b/_includes/cmdout.htm
@@ -1,8 +1,8 @@
 <pre class="command-line"><span class="command">{{ include.cmd }}</span>
-{%- if include.sm != '' -%}
+{%- if include.small %}
 	<span class="output">{{ include.sm }}</span>
-{%- endif -%}
-{%- if include.out != '' -%}
+{%- endif %}
+{%- if include.out %}
 	{{ include.out }}
-{%- endif -%}
+{%- endif %}
 </pre>
