--- a/_includes/cmdout.htm
+++ b/_includes/cmdout.htm
@@ -1,6 +1,6 @@
 <pre class="command-line"><span class="command">{{ include.cmd }}</span>
 {%- if include.small %}
-	<span class="output">{{ include.sm }}</span>
+	<span class="output">{{ include.small }}</span>
 {%- endif %}
 {%- if include.out %}
 	{{ include.out }}
