--- a/css/github.css
+++ b/css/github.css
@@ -5250,10 +5250,11 @@ a[href ^= "mailto"] {
 	position: relative
 }
 .command {
-    color: #fff;
+	color: #fff;
+	margin-bottom: 0px !important
 }
 .output {
-    color: #d9d9d9;
-    font-size: 75%;
-    line-height: 1;
+	color: #d9d9d9;
+	font-size: 75%;
+	line-height: 1
 }
