--- a/_includes/cl.htm
+++ b/_includes/cl.htm
@@ -1,4 +1,4 @@
-<pre class="command-line"><span class="command">{{ include.cmd }}</span>
+<pre class="command-line"><p class="command">{{ include.cmd }}</p>
 {%- if include.small -%}
 	<span class="output">{{ include.small }}</span>
 {%- endif -%}
