--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 	<title>{{ page.title }} | E-Note</title>
 	<link href="{{ site.baseurl }}/favicon.ico" rel="shortcut icon" type="image/png">
 	<link href="{{ site.baseurl }}/css/github.css" rel="stylesheet">
+	{% include constants.htm -%}
 </head>
 <body><a name="top"></a>
 <div class="container-lg px-3 my-5 markdown-body">
