--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<link href="{{ site.baseurl }}/css/github.css" rel="stylesheet">
 	{% include constants.htm -%}
 </head>
-<body><a name="top"></a>
+<body><a name="top"></a>{{ warn }}
 <div class="container-lg px-3 my-5 markdown-body">
 	<nav>
 		{% include breadcrumb.htm %}
