--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<link href="{{ site.baseurl }}/css/github.css" rel="stylesheet">
 	{% include constants.htm -%}
 </head>
-<body><a name="top"></a>{{ warn }}
+<body><a name="top"></a>
 <div class="container-lg px-3 my-5 markdown-body">
 	<nav>
 		{% include breadcrumb.htm %}
@@ -18,7 +18,7 @@
 		{{ content }}
 	</article>
 	<footer>
-		<p>&nbsp;</p>
+		<p>&nbsp;{{ warn }}</p>
 		{% include footer.htm %}
 	<footer>
 </div>
