--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 		{{ content }}
 	</article>
 	<footer>
-		<p>&nbsp;{{ warn }}</p>
+		<p>&nbsp;</p>
 		{% include footer.htm %}
 	<footer>
 </div>
