--- a/_includes/breadcrumb.htm
+++ b/_includes/breadcrumb.htm
@@ -6,7 +6,7 @@
 	{%- for item in arr_pages -%}
 		{%- if item == '' -%}
 			{%- assign full_url = site.baseurl -%}
-			<a href="{{ full_url }}"><img src="{{ site.baseurl }}/i/enote_sm.png" alt="home"></a>
+			<a href="{{ full_url }}"><img src="{{ site.baseurl }}/i/enote_sm.png" alt="home" title="home"></a>
 		{%- else -%}
 			{%- capture full_url %}{{ full_url }}/{{ item }}{% endcapture -%}
 			{%- assign dir = item | remove: ".html" -%}
