--- a/_includes/a.htm
+++ b/_includes/a.htm
@@ -1,4 +1,4 @@
-<a href="include.href" target="_blank">
+<a href="{{ include.href }}" target="_blank">
 {%- if include.short -%}
   {{ include.short }}
 {%- else -%}
