change a.htm tmpl

--- a/_includes/a.htm
+++ b/_includes/a.htm
@@ -1,7 +1,7 @@
-<a href="{{ include.href }}" target="_blank">
+<a href="{{ include.url }}" target="_blank">
 {%- if include.short -%}
-  {{ include.short }}
+  {{ include.text }}
 {%- else -%}
-  {{ include.href }}
+  {{ include.url }}
 {%- endif -%}
 </a>
