--- a/_includes/a.htm
+++ b/_includes/a.htm
@@ -1,5 +1,5 @@
 <a href="{{ include.url }}" target="_blank">
-{%- if include.short -%}
+{%- if include.text -%}
   {{ include.text }}
 {%- else -%}
   {{ include.url }}
