--- a/_includes/warn.htm
+++ b/_includes/warn.htm
@@ -1,1 +1,1 @@
-<span style="color:{{ include.color }}; font-weight: 500">{{ include.text }}</span>
+<span style="color:{{ include.color }}; font-size: 1.25em; font-weight: bold; font-weight: 500">{{ include.text }}</span>
