--- a/css/github.css
+++ b/css/github.css
@@ -5258,3 +5258,11 @@ a[href ^= "mailto"] {
 	font-size: 75%;
 	line-height: 1
 }
+.warn {
+    border: 1px solid #222;
+    color: #222;
+    background-color: #ffffb9;
+    font-weight: normal;
+    font-style: normal;
+    cursor: pointer;
+}
