--- a/css/github.css
+++ b/css/github.css
@@ -5258,30 +5258,31 @@ a[href ^= "mailto"] {
 	font-size: 75%;
 	line-height: 1
 }
+
 .warn {
-    border: 1px solid #ff6000;
-    color: #ff6000;
-    background-color: #fff;
-    font-weight: 600;
-    font-style: normal;
-    border-radius: 0.25rem;
-    padding: 0 4px;
+	border: 1px solid #ffeeba;
+	color: #856404;
+	background-color: #fff3cd;
+	font-weight: 600;
+	font-style: normal;
+	border-radius: 0.25rem;
+	padding: 0 4px;
 }
 .info {
-    border: 1px solid #007bff;
-    color: #007bff;
-    background-color: #fff;
-    font-weight: 600;
-    font-style: normal;
-    border-radius: 0.25rem;
-    padding: 0 4px;
+	border: 1px solid #b8daff;
+	color: #004085;
+	background-color: #cce5ff;
+	font-weight: 600;
+	font-style: normal;
+	border-radius: 0.25rem;
+	padding: 0 4px;
 }
 .dang {
-    border: 1px solid #dc3545;
-    color: #dc3545;
-    background-color: #fff;
-    font-weight: 600;
-    font-style: normal;
-    border-radius: 0.25rem;
-    padding: 0 4px;
+	border: 1px solid #f5c6cb;
+	color: #721c24;
+	background-color: #f8d7da;
+	font-weight: 600;
+	font-style: normal;
+	border-radius: 0.25rem;
+	padding: 0 4px;
 }
