add bootstrap containers

--- a/css/github.css
+++ b/css/github.css
@@ -4101,35 +4101,72 @@ pre {
 	height: auto;
 	clip: auto
 }
+
+
 .container {
-	width: 980px;
-	margin-right: auto;
-	margin-left: auto
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
-.container::before {
-	display: table;
-	content: ""
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
 }
-.container::after {
-	display: table;
-	clear: both;
-	content: ""
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
 }
-.container-md {
-	max-width: 768px;
-	margin-right: auto;
-	margin-left: auto
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
 }
-.container-lg {
-	max-width: 1012px;
-	margin-right: auto;
-	margin-left: auto
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
 }
-.container-xl {
-	max-width: 1280px;
-	margin-right: auto;
-	margin-left: auto
+
+.container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
+
+@media (min-width: 576px) {
+  .container, .container-sm {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container, .container-sm, .container-md {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1140px;
+  }
+}
+
 .columns {
 	margin-right: -10px;
 	margin-left: -10px
