--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<link href="{{ site.baseurl }}/css/github.css" rel="stylesheet">
 </head>
 <body><a name="top"></a>
-<div class="container markdown-body">
+<div class="container my-5 markdown-body">
 	<nav>
 		{% include breadcrumb.htm %}
 	</nav>
