--- a/_includes/footer.htm
+++ b/_includes/footer.htm
@@ -1,11 +1,11 @@
 <hr style="margin: 24px 0 5px;" />
 <p><small>
 	<span class="float-left">
-		<a href="#top" class="text-gray">top</a>
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/tree/master{{ page.url }}" target="_blank" class="lighter">code</a>
+		&nbsp; | &nbsp;
+		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}README.md" target="_blank" class="lighter">edit</a>
 	</span>
 	<span class="float-right">
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/tree/master{{ page.url }}" target="_blank" class="text-gray">code</a>
-		&nbsp; | &nbsp;
-		<a href="https://github.com/olexsyn{{ site.baseurl }}/edit/master{{ page.url }}README.md" target="_blank" class="text-gray">edit</a>
+		<a href="#top" class="text-gray">top</a>
 	</span>
 </small></p>
